--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,9 @@
         android:orderInCategory="100"
         android:title="@string/change_grid_size"
         app:showAsAction="never" />
+    <item
+    android:id="@+id/action_install_as_system_keyboard"
+    android:orderInCategory="100"
+    android:title="@string/install_as_system_keyboard"
+    app:showAsAction="never" />
 </menu>
