--- a/app/src/main/res/layout/keyboard_main.xml
+++ b/app/src/main/res/layout/keyboard_main.xml
@@ -1,34 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@android:color/white"
-    >
+    android:orientation="vertical">
+
     <View
         android:layout_width="match_parent"
         android:layout_height="4dp"
         android:background="@color/colorAccent"/>
+
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/keyboard_backspace"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="@string/backspace"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.2"
-        android:orientation="horizontal"
-        >
-        <Button
-            android:id="@+id/keyboard_backspace"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/backspace"
+        android:layout_weight="4">
 
-            />
+        <include layout="@layout/keys"/>
 
-            />
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.8">
-        <include layout="@layout/keys"></include>
-    </LinearLayout>
+
 </LinearLayout>
