--- a/app/src/main/res/layout/grid_button.xml
+++ b/app/src/main/res/layout/grid_button.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/text"
     style="?android:attr/spinnerDropDownItemStyle"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:singleLine="true"
