--- a/app/src/main/res/layout/keyboard_main.xml
+++ b/app/src/main/res/layout/keyboard_main.xml
@@ -11,7 +11,7 @@
         android:layout_height="4dp"
         android:background="@color/colorAccent"/>
 
-    <android.support.v7.widget.AppCompatButton
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/keyboard_backspace"
         android:layout_width="match_parent"
         android:layout_height="0dp"
