--- a/app/src/main/res/layout/keys.xml
+++ b/app/src/main/res/layout/keys.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
-    <android.support.v7.widget.AppCompatButton
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/left_btn"
         android:layout_width="0dp"
         android:layout_height="match_parent"
@@ -19,7 +19,7 @@
         android:layout_weight="3"
         android:numColumns="3"/>
 
-    <android.support.v7.widget.AppCompatButton
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/right_btn"
         android:layout_width="0dp"
         android:layout_height="match_parent"
